----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-10-20 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php: there was already a tip icon in our collection,
      thanks to Michael Keck

2004-10-20 Michal Čihař  <michal@cihar.com>
    * lang/czech: Update.
    * tbl_relation.php: Backquote table name (bug #1050441).
    * db_details_qbe.php: Backquote table name.
    * libraries/display_tbl.lib.php: Comments now work for multi table selects
      (bug #789647).
    * server_processlist.php: Display executed SQL.
    * main.php, server_common.inc.php, server_links.inc.php,
      server_binlog.php, lang/*: Added support for displaying bin logs (RFE
      #1011770).
    * Documentation.html, config.inc.php, libraries/common.lib.php,
      libraries/config_import.lib.php, libraries/auth/config.auth.lib.php,
      libraries/auth/cookie.auth.lib.php: Allow simple blocking of root login
      (RFE #1012971), show just Access denied in case we denied it.
    * db_operations.php, db_details_links.php, db_details_structure.php:
      Separate operations from structure (RFE #808029).
    * tbl_move_copy.php: Remove unused PMA_myHandler().
    * lang/*, libraries/tbl_move_copy.php, libraries/export/sql.php,
      db_operations.php, tbl_move_copy.php: Implemented database copying (RFE
      #996730), this forced separating code for copying tables.

2004-10-19 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/database_interface.lib.php: bug #1041667, correctly
      check the server version instead of the client API version
    * tbl_change.php, libraries/common.lib.php, lang/*: new function
      PMA_showHint($message), new $strUseTabKey,
      new light bulb image (temporary)
    * server_privileges.php: bug #916117, PMA_showHint($strEscapeWildcards)

2004-10-19 Michal Čihař  <michal@cihar.com>
    * export.php: Use just \n for SQL exports (bug #1042521).