@@ -38,7 +38,16 @@ if (!isset($param) || $param[0] == '') {
     require('./tbl_properties_common.php');
     //$err_url   = 'tbl_select.php' . $err_url;
     $url_query .= '&amp;goto=tbl_select.php&amp;back=tbl_select.php';
+
+    /**
+     * Gets tables informations
+     */
     require('./tbl_properties_table_info.php');
+
+    /**
+     * Displays top menu links
+     */
+    require('./tbl_properties_links.php');
 
     if (!isset($goto)) {
         $goto = $cfg['DefaultTabTable'];
